# img_bot

./: .dockerignore  .env.example  .gitignore  DOCS.md  Dockerfile  USAGE.md  ai.py  compositor.py  config.py  docker-compose.yml  main.py  prompts.py  pyproject.toml  requirements.txt
docker/: entrypoint.sh  supervisord.conf
src/imgbot/: __init__.py  __main__.py  config.py
src/imgbot/ai/: claude.py  gemini.py
src/imgbot/api/: app.py
src/imgbot/api/static/: index.html
src/imgbot/cli/: __main__.py  generate.py  serve.py  tenants.py
src/imgbot/onboarding/: meta_prompts.py  orchestrator.py
src/imgbot/pipeline/: brand.py  generate.py
src/imgbot/pipeline/prompts/: runtime.py
src/imgbot/tenants/: assets.py  schema.py  store.py
supabase/: schema.sql
supabase/migrations/: 000_phone_to_chat_id.sql  001_pending_tenants.sql  002_phone_lookup.sql
whatsapp-bot/: README.md  bot.js  package-lock.json  package.json
